# TestTask

./: Build.bat  Build.sh  CMakeLists.txt  LICENSE  START_ALL_SERVICES.sh
camera_service/: CMakeLists.txt
camera_service/include/: CameraService.hpp
camera_service/src/: CameraService.cpp  main.cpp
include_common/: IService.hpp
keyboard_input_service/: CMakeLists.txt
keyboard_input_service/include/: KeyboardInputService.hpp
keyboard_input_service/src/: KeyboardInput.cpp  main.cpp
service_registry/: CMakeLists.txt
service_registry/include/: ServiceRegistry.hpp
service_registry/src/: ServiceRegistry.cpp  main.cpp
streamer_service/: CMakeLists.txt
streamer_service/include/: StreamerService.hpp
streamer_service/src/: StreamerService.cpp  main.cpp
tracker_service/: CMakeLists.txt
tracker_service/include/: TrackerService.hpp
tracker_service/src/: TrackerService.cpp  main.cpp
